test/aws/terraform/public_access_security_groups_port_rule/port_22_allowed_from_internet_to_ec2_using_tf_complete_vpc_module/cloudrail_results.txt

It seems there is some use of Terraform in your code that is not supported by Cloudrail’s version of Terraform and its related providers. 
Please see detailed log below. You may either change your code to correct these issues, or contact us through https://indeni.com/cloudrail-user-support/ and mentioned job_id '6949807b-4b55-4432-afc8-0450cf8a8e25'
Error: UnauthorizedOperation: You are not authorized to perform this operation.
	status code: 403, request id: ff019c29-67f3-4049-a5fb-d39a49958616

  on .terraform/modules/vpc_example_complete-vpc/examples/complete-vpc/main.tf line 5, in data "aws_security_group" "default":
   5: data "aws_security_group" "default" {




